Fixed alignment in side menu buttons

--- a/app/src/components/sidemenu/sidemenu.scss
+++ b/app/src/components/sidemenu/sidemenu.scss
@@ -44,9 +44,9 @@ side-menu {
       text-transform: none;
   }
 }
-.side-menu-icon, .menu-toggle-icon {
+.side-menu-icon[md-font-icon], .menu-toggle-icon[md-font-icon] {
   height: 100%;
-  line-height: 48px;
+  line-height: inherit;
 }
 .menu-toggle-icon {
   text-align: center;
